# radicle-cli

./: Cargo.toml
common/: Cargo.toml
common/src/: git.rs  lib.rs  proposal.rs  seed.rs
issue/: Cargo.toml
issue/src/: lib.rs  tui.rs
issue/src/tui/: actions.rs  spans.rs  state.rs  widgets.rs
propose/: Cargo.toml
propose/src/: lib.rs
remote-helper/: Cargo.toml
remote-helper/src/: main.rs
terminal/: Cargo.toml
terminal/src/: lib.rs  tui.rs
terminal/src/tui/: editor.rs  events.rs  layout.rs  spans.rs  store.rs  template.rs  theme.rs  window.rs
tui/: Cargo.toml
tui/src/: app.rs  lib.rs
tui/src/app/: action.rs  mod.rs  state.rs  terminal.rs  ui.rs
tui/src/app/terminal/: events.rs  keys.rs  mod.rs
tui/src/app/ui/: widgets.rs
